<resources>
    <!-- Shelfie server connection -->
    <string name="game_view_content_description">Game view</string>

    <string name="app_name">Shelfie</string>
    <string name="title_home">Home</string>
    <string name="title_search">Pesquisar</string>
    <string name="title_profile">Perfil</string>

    <!-- Bundle -->
    <string name="key_guardian_user">KEY_GUARDIAN_USER</string>
    <string name="arg_guardian_user">GUARDIAN_USER_DATA</string>
    <string name="arg_child_profile">CHILD_PROFILE_DATA</string>
    <string name="arg_interactive_book">INTERACTIVE_BOOK_DATA</string>


    <!-- Titles and labels -->
    <string name="subtitle_app_login">A biblioteca interativa da sua família!</string>
    <string name="label_register">Ainda não possui uma conta?</string>
    <string name="title_form_child_profile">É um prazer te conhecer!</string>
    <string name="title_welcome_form_guardian_user">Boas vindas!</string>
    <string name="subtitle_form_guardian_user">Insira os dados de um de seus responsáveis</string>
    <string name="label_child_profile_nickname">Qual é o seu nome?</string>
    <string name="label_child_profile_character_selector">Escolha um personagem de nossos livros para ser o avatar do seu perfil</string>
    <string name="title_manage_child_profile_add">Estamos quase lá!</string>
    <string name="title_manage_child_profile_read">Olá! Tudo bem?</string>
    <string name="subtitle_manage_child_profile_add">Queremos conhecer você</string>
    <string name="subtitle_manage_child_profile_read">Acesse o seu perfil para continuar</string>
    <string name="empty_state_book_search">Procure por seus livros favoritos</string>
    <string name="empty_state_book_search_not_found">Não encontramos livros com esse nome</string>
    <string name="label_book_did_you_like">Você gostou do livro?</string>
    <string name="label_book_unlock">Desbloqueie para aventurar-se por apenas</string>
    <string name="label_book_child_current_coins_amount">Você possui %1$d moedas</string>
    <string name="label_book_author">Autor</string>
    <string name="label_book_publish_date">Publicado em</string>
    <string name="label_book_characters">Personagens</string>
    <string name="label_book_quests">Missões</string>
    <string name="label_my_profiles">Meus perfis</string>


    <!-- Dialog -->
    <string name="dialog_tag">CustomDialogFragment</string>
    <string name="dialog_confirm_delete_user">Tem certeza que deseja excluir o seu cadastro? Todos os livros desbloqueados e progresso de seus perfis serão perdidos.</string>
    <string name="dialog_confirm_delete_profile">Quer mesmo excluir o seu perfil? Todos os seus livros desbloqueados e missões serão perdidos.</string>
    <string name="dialog_login_failed">Não foi possível efetuar o login. Email ou senha incorretos.</string>
    <string name="dialog_register_failed">Email já cadastrado no sistema. Realize o login.</string>
    <string name="dialog_server_connection">Não foi possível conectar com o servidor. Por favor, tente novamente mais tarde.</string>
    <string name="dialog_book_unlock_failed">Você não possui moedas o suficiente para desbloquear este livro. Complete missões de outros livros para ganhar moedas e tente novamente.</string>


    <!-- Form -->
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmação de senha</string>
    <string name="error_required_field">Campo obrigatório.</string>
    <string name="error_invalid_name_length">O nome deve possuir entre 3 e 50 letras.</string>
    <string name="error_invalid_nickname_length">O campo deve possuir entre 3 e 20 letras.</string>
    <string name="error_invalid_email">Email inválido.</string>
    <string name="error_invalid_password">A senha deve conter ao menos 6 caracteres, com letras e números.</string>
    <string name="error_invalid_password_confirmation">As senhas não condizem.</string>

    <!-- Button -->
    <string name="register">Inscreva-se</string>
    <string name="login">Entrar</string>
    <string name="logoff">Sair</string>
    <string name="settings">Configurações</string>
    <string name="next">Próximo</string>
    <string name="save">Salvar</string>
    <string name="delete_profile">Remover perfil</string>
    <string name="delete_user">Remover cadastro</string>
    <string name="search">Buscar</string>
    <string name="home">Início</string>
    <string name="my_profile">Meu perfil</string>
    <string name="edit_guardian_user">Editar cadastro</string>
    <string name="edit_child_profiles">Editar perfis</string>
    <string name="read">Ler</string>
    <string name="unlock">Desbloquear</string>
    <string name="loading">Carregando...</string>
    <string name="ok">Ok</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>

    <!-- Images content description -->
    <string name="content_book_thumbnail">Miniatura do livro</string>
    <string name="content_book_cover">Ilustração da capa do livro</string>
    <string name="content_login_illustration">Fundo ilustrado com livros</string>
    <string name="content_form_illustration">Formulário</string>
    <string name="content_character">Personagem</string>
    <string name="content_quest_icon">Ícone de missão</string>
    <string name="content_background_blob">Plano de fundo</string>
    <string name="content_add_child_profile">Criar novo perfil</string>
    <string name="content_previous_button">Anterior</string>
    <string name="content_next_button">Próximo</string>
    <string name="content_settings_illustration">Configurações</string>
    <string name="content_add_new_profile">Adicionar novo perfil</string>
    <string name="content_edit_profile">Editar perfil</string>

    <!-- Utils -->
    <string name="date_formatter">dd/MM/yyyy</string>
    <string name="avatar">Avatar</string>
    <string name="url_character_get_image">character/%1$d/image</string>
    <string name="url_book_get_image">interactive_book/%1$d/image</string>

</resources>