<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userregister.FormChildProfileActivity">

    <LinearLayout
        android:id="@+id/ll_form_child_profile_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:divider="@drawable/divider10dp"
        android:elevation="1dp"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/ll_form_child_profile_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:id="@+id/tv_form_child_profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_form_child_profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_child_profile_nickname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:counterTextColor="@color/white"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="@color/white"
            app:suffixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_child_profile_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_child_profile_nickname"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_form_child_profile_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:divider="@drawable/divider10dp"
        android:elevation="1dp"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_form_child_profile_nickname">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_child_profile_character_selector"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox_child_profile_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="nowrap"
            app:justifyContent="space_around"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/ib_previous_character"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/content_previous_button"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <ImageView
                android:id="@+id/img_character_preview"
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:layout_weight="2"
                android:contentDescription="@string/content_character"
                android:minWidth="250dp"
                android:minHeight="350dp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_circular_character_loader"
                style="?android:attr/progressBarStyle"
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:paddingStart="60dp"
                android:paddingEnd="60dp" />

            <ImageButton
                android:id="@+id/ib_next_character"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/content_next_button"
                android:focusable="true"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

        </com.google.android.flexbox.FlexboxLayout>

        <ProgressBar
            android:id="@+id/progress_child_profile_save"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_child_profile_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_child_profile_delete"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_close_black_18dp"
            android:text="@string/delete_profile"
            android:textAllCaps="false"
            android:textColor="@color/gray_600"
            android:visibility="gone"
            app:icon="@drawable/ic_close_black_18dp"
            app:iconGravity="textStart"
            app:iconTint="@color/gray_600" />

    </LinearLayout>

    <ImageView
        android:layout_width="787dp"
        android:layout_height="594dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/content_background_blob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_character_selector_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>